# testbed

./: README.md
api/: .env  Cargo.toml
api/src/: main.rs
backend/: .gitignore  Cargo.toml  Dockerfile  README.md
backend/api/: .env.example  Cargo.toml
backend/api/src/: handlers.rs  main.rs
backend/api/src/experiment/: server.rs  session.rs
backend/auth/: Cargo.toml
backend/auth/src/: handlers.rs  lib.rs  requests.rs  templates.rs
backend/auth/templates/mails/: forgot-password.html  reset-password.html  verify-account.html
backend/controller/: .env.example  Cargo.toml
backend/controller/src/: connection.rs  error.rs  executor.rs  main.rs  messages.rs  process.rs  state.rs
backend/core/: Cargo.toml
backend/core/src/: db.rs  error.rs  lib.rs  messages.rs  responses.rs  sanitized.rs  schema.rs  types.rs  utils.rs  websocket_messages.rs
backend/core/src/middlewares/: auth.rs  mod.rs  role.rs
backend/core/src/models/: experiment.rs  mod.rs  paginate.rs  role.rs  token.rs
backend/derive/: Cargo.toml
backend/derive/src/: lib.rs
backend/experiment/: Cargo.toml
backend/experiment/src/: connection.rs  handlers.rs  lib.rs  main.rs  messages.rs  requests.rs  session.rs
backend/experiment/src/connection/: messages.rs  mod.rs  server.rs  session.rs
backend/experiment/src/handlers/: storage.rs
backend/experiment/src/models/: controller.rs  experiment.rs  job.rs  mod.rs  run.rs  runner.rs
backend/migrations/2020-12-14-174854_basics/: down.sql  up.sql
backend/service/: Cargo.toml
backend/service/src/: lib.rs  notification.rs
backend/service/src/clients/: mail.rs
backend/service/src/ws/: messages.rs  mod.rs  session.rs  session_manager.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  websocket_messages.rs
backend/slot/: Cargo.toml
backend/slot/src/: handlers.rs  lib.rs  models.rs  requests.rs
backend/testbed/: .env.example  Cargo.toml
backend/testbed/src/: connection.rs  executor.rs  main.rs  messages.rs  state.rs
backend/user/: Cargo.toml
backend/user/src/: handlers.rs  lib.rs  requests.rs
backend/user/src/middlewares/: auth.rs  role.rs
backend/user/src/models/: user.rs
docker/: docker-compose.yml
experiment/: .gitignore  Cargo.toml  README.md
experiment/src/: log.py  main.py  main.rs  messager.py  receiver.py  transmitter.py
frontend/: README.md  angular.json  package-lock.json  package.json  tslint.json
frontend/src/: defs.ts  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts  helpers.ts  locales.ts  routes.ts
frontend/src/app/admin/: admin-routing.module.ts  admin.module.ts
frontend/src/app/admin/components/controller/: controller.component.html  controller.component.spec.ts  controller.component.ts
frontend/src/app/admin/components/controllers/: controllers.component.html  controllers.component.ts
frontend/src/app/admin/components/runner/: runner.component.html  runner.component.scss  runner.component.spec.ts  runner.component.ts
frontend/src/app/admin/components/runners/: runners.component.html  runners.component.spec.ts  runners.component.ts
frontend/src/app/admin/services/: admin-view-model.service.spec.ts  admin-view-model.service.ts
frontend/src/app/auth/: auth-routing.module.ts  auth.module.ts
frontend/src/app/auth/components/auth/: auth.component.html
frontend/src/app/auth/components/forgot-password/: forgot-password.component.html  forgot-password.component.ts
frontend/src/app/auth/components/login/: login.component.html  login.component.ts
frontend/src/app/auth/components/logout/: logout.component.ts
frontend/src/app/auth/components/reset-password/: reset-password.component.html  reset-password.component.ts
frontend/src/app/auth/components/sign-up/: sign-up.component.html  sign-up.component.ts
frontend/src/app/auth/components/verify-account/: verify-account.component.html  verify-account.component.ts
frontend/src/app/auth/services/: auth-view-model.service.spec.ts  auth-view-model.service.ts  auth.service.ts
frontend/src/app/core/: core.module.ts  models.ts
frontend/src/app/core/interceptors/: http-config.interceptor.ts
frontend/src/app/core/services/: cache.service.ts  main-request.service.spec.ts  main-request.service.ts  main-view-model.service.spec.ts  main-view-model.service.ts  main.service.spec.ts  main.service.ts  pagination.service.spec.ts  pagination.service.ts  request-fail.service.spec.ts  request-fail.service.ts  web-socket.service.ts
frontend/src/app/core/websocket/: models.ts
frontend/src/app/experiment/: experiment-routing.module.ts  experiment.module.ts  models.ts
frontend/src/app/experiment/services/: experiment-view-model.service.spec.ts  experiment-view-model.service.ts
frontend/src/app/navigation/: navigation.module.ts
frontend/src/app/shared/: shared.module.ts
frontend/src/app/shared/directives/: form-validity.directive.ts
frontend/src/app/slot/: models.ts  slot-routing.module.ts  slot.module.ts
frontend/src/app/slot/services/: slot-view-model.service.spec.ts  slot-view-model.service.ts
frontend/src/app/user/: models.ts  user-routing.module.ts  user.module.ts
frontend/src/app/user/services/: user-resolve.service.spec.ts  user-resolve.service.ts  user-view-model.service.spec.ts  user-view-model.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
resources/: openapi.yaml  requirements.md
testbed/: .gitignore
testbed/receiver/: receiver.ino
testbed/transmitter/: arduino.ino  main.cpp  transmitter.ino
(+28 files in other folders)
