[workspace]
members = [
    "api",
    "auth",
    "core",
    "experiment",
    "controller",
    "service",
    "slot",
    "shared",
    "user"
]
[package]
name = "backend"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev.package."*"]
opt-level = "z"
debug = false
debug-assertions = false