[package]
name = "experiment"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-codec = "0.3"
awc = "2"

bytes = "0.6"
futures = "0.3"

dotenv = "0.15"
env_logger = "0.8"
log = "0.4"