[package]
name = "api"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
user = { path = "../user"}

actix = "0.10"
actix-web = "3"
actix-cors = "0.5"
actix-web-actors = "3"

diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }

dotenv = "0.15"
env_logger = "0.8"
log = "0.4"

lazy_static = "1.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"