[package]
name = "auth"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
user = { path = "../user" }
service = { path = "../service" }
derive = { path = "../derive" }

actix-web = "3"

askama = "0.10"

diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }

serde = "1"

validator = { version = "0.12", features = ["derive"] }