[package]
name = "core"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

base64 = "0.13"

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }

futures = "0.3"

htmlescape = "0.3"

jsonwebtoken = "7"

lazy_static = "1.4"

regex = "1.4"

ring = "0.16"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

validator = { version = "0.12", features = ["derive"] }