[package]
name = "experiment"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
shared = { path = "../shared" }
user = { path = "../user" }
derive = { path = "../derive" }

actix = "0.10"
actix-web = "3"
actix-web-actors = "3"

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }

log = "0.4"

serde = "1"
serde_json = "1"