[package]
name = "service"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = { version = "3", features = ["rustls"] }

log = "0.4"

rustls = "0.18"

serde = "1"

webpki-roots = "0.21"