[package]
name = "service"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../core"}

actix = "0.10"
actix-web = { version = "3", features = ["rustls"] }
actix-web-actors = "3"

log = "0.4"

rand = "0.8"

rustls = "0.18"

serde = "1"
serde_json = "1"

webpki-roots = "0.21"