[package]
name = "testbed"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

actix = "0.10"
actix-codec = "0.3"
awc = "2"

bytes = "0.6"
futures = "0.3"

dotenv = "0.15"
env_logger = "0.8"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sysfs_gpio = "0.5"