[package]
name = "user"
version = "0.1.0"
authors = ["bwqr <ruzgardeniz.08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
derive = { path = "../derive" }

actix-web = "3"

diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }

futures = "0.3"

lazy_static = "1.4"

regex = "1.4"

serde = "1"